--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,11 +23,11 @@
         <!-- Navbar end -->
         
         <div class="cotainer-fluid p-0 m-0">
-          <img src="../assets/images/ppp.jpg" alt="Welcome" class="img-fluid" width="100%" style="height: 532px;">
+          <img src="../../assets/images/ppp.jpg" alt="Welcome" class="img-fluid" width="100%" style="height: 532px;">
         </div>
       </div>
       <div>
-        <footer class="py-2 bg-info">
+        <footer class="py-2 bg-primary">
             <h6 class="text-center text-white">Shoppingcart &copy; 2020 Reserveed</h6>
         </footer>
     </div>
